# caro-ai

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs  mcts.rs
src/board/: mod.rs  patterns.rs
