[package]
name = "caro-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.9.0"
ndarray = "0.15.6"
radix_fmt = "1.0.0"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
]
